Fixed main menu dropdown..Need more styling.  Worked on mobile menu.  Links still don't work

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Updated 1/30/19 11:40pm */
+/* Updated 2/1/19 */
 
 
 /* parallax.css */
@@ -26,11 +26,12 @@ p, li {
 a {
   color: black;
   text-decoration: none;
+  transition: 1s;
 }
 a:hover, ul>li>a:hover {
   color: rgb(124, 3, 15);
   text-decoration: none;
-  transition: 0.5s;
+  transition: 1s;
 }
 img {
   max-width:100%;
@@ -82,9 +83,9 @@ em {
   float: left;
   /* min-width: 79%; */
 }
-a#mobile-anchor {
+a#mobile-menu-link {
   position: relative;
-  z-index: 4;
+  z-index: 5;
   display: none;
 }
 /* #mobile-menu {
@@ -108,7 +109,9 @@ float: left;
 padding: 5px 0;
 text-transform: uppercase;
 }
-
+ #social-icons  {
+   padding: 0 2em 0 0;
+ }
 .uk-active a {
   color: rgb(124, 3, 15);
   text-decoration: underline !important;
@@ -152,7 +155,7 @@ text-transform: uppercase;
   text-align: right;
 }
 .heading {
-  padding: 2em 0 1em 0;
+  padding: 1em 0 1em 0;
 }
 .article {
   /* -webkit-transform: translate3d(0,0,0); */
@@ -185,6 +188,7 @@ text-transform: uppercase;
 height: 110vh;
 }
 .uk-slider-items {
+      /* ????? */
     will-change: transform;
     position: relative;
     height: 400px;
@@ -249,15 +253,13 @@ h1[id*="-heading"]:after {
 #blog-heading:after {
   content: "BLOG";
 }
-/* condense these using * */
-#bio-anchor, #calendar-anchor, #perform-anchor, #media-anchor, #contact-anchor, #blog-anchor {
-
+[id*="-anchor"] {
   display: block;
   position: relative;
   top: -100px;
   height: 1px;
-
 }
+/* condense these using * */
 
 #bio, #calendar, #upcoming, #past, #media, #contact, #blog {
 }
@@ -288,7 +290,7 @@ h1[id*="-heading"]:after {
   perspective: 1px;
   opacity: 0.3;
   filter: alpha(opacity=30); /* For IE8 and earlier */
-  height: 90%;
+  /* height: 90%; */
   /* scrolling effect */
   background-attachment: fixed;
   background-position: center;
@@ -327,9 +329,18 @@ h1[id*="-heading"]:after {
   #navbar {
     display: none;
   }
-  a#mobile-anchor {
+  a#mobile-menu-link {
+    color: black;
     display: block;
     padding: 2em;
+    transition: 1s;
+  }
+  a#mobile-menu-link:hover {
+    color: rgb(124, 3, 15);
+    transition: 1s;
+  }
+  .uk-nav>li>a {
+  float: none;
   }
   .parallax1  {
     /* width: 140%; */
